--- a/vscode/user.settings.json
+++ b/vscode/user.settings.json
@@ -7,5 +7,8 @@
     "editor.fontFamily": "'Bitstream Vera Sans Mono', 'Malgun Gothic', Consolas, 'Courier New', monospace",
     "editor.fontSize": 16,
     "terminal.integrated.fontSize": 16,
-    "debug.console.fontSize": 16
+    "debug.console.fontSize": 16,
+    
+    "editor.formatOnSave": true,
+    "python.formatting.provider": "black"
 }
